fix: changed z-index of sidebar toggle button

--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -6,7 +6,7 @@
     position: fixed;
     top: 15px;
     left: 15px;
-    z-index: 9999;
+    z-index: 3;
     cursor: pointer;
 }
 
